# streami

./: Cargo.toml  Dockerfile  build.rs  diesel.toml
frontend/: package.json
frontend/src/: App.js
frontend/src/file_viewer/: index.js
migrations/00000000000000_diesel_initial_setup/: up.sql
src/: api.rs  build.rs  constants.rs  file_watcher.rs  grpc_service.rs  lib.rs  main.rs  models.rs  response.rs  rpc_utils.rs  schema.rs  serializers.rs  sparks.rs  utils.rs
src/proto/: service.proto
src/sales/: mod.rs  sale_partner_api.rs  serializers.rs
src/sims/: mod.rs  serializers.rs  sim_api.rs  utils.rs
src/sparks/: mod.rs  serializers.rs  sparks_api.rs  sparks_client.rs
