[package]
name = "streami"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.8.0-alpha.1", features = ["multipart", "macros"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "chrono", "uuid"] }
http = "1.2.0"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tokio = { version = "1.42.0", features = ["full"] }
sanitize-filename = "0.6.0"
csv = "1.3.1"
chrono = { version = "0.4.39", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
serde_json = "1.0.134"
reqwest = { version = "0.12.12", features = ["json"] }
thiserror = "2.0.9"
tracing-appender = {version = "0.2.3"}
uuid = { version = "1.13.1", features = ["serde", "v4"] }
calamine = {version = "0.26.1", features = ["default"]}

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = false
split-debuginfo = "unpacked" # Faster recompilation
incremental = true
