[package]
name = "streami"
version = "0.1.1"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
axum = { version = "0.8.3", features = ["multipart", "macros"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "chrono", "uuid"] }
http = "1.3.1"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tokio = { version = "1.44.2", features = ["full"] }
sanitize-filename = "0.6.0"
csv = "1.3.1"
chrono = { version = "0.4.40", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json"] }
thiserror = "2.0.12"
tracing-appender = {version = "0.2.3"}
uuid = { version = "1.16.0", features = ["serde", "v4"] }
calamine = {version = "0.26.1", features = ["default"]}
tonic = "0.13.0"
prost = "0.13.5"
tower = "0.5.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = false
split-debuginfo = "unpacked" # Faster recompilation
incremental = true

[build-dependencies]
tonic-build = "0.13.0"
